--- a/main.html
+++ b/main.html
@@ -9,8 +9,41 @@
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
+	
 </script>
+<h2>Signup form</h2>
+	<form method="post">
+		<label for="name">Name</label>
+	<input type="text" id="name" name="name" placeholder="Name" required>
+		<label for="email">Email</label>
+	<input type="email" id="email" name="email" placeholder="Email" required>
+		<p>Gender</p>
+		<label>
+			<input type="radio" name="gender_m" value="Male" required>Male
+		</label>
+	<label>
+	<input type="radio" name="gender_f" value="Female" required>Female  
+		</label>
+		<label for="cars">Car Brands</label>
 
+<select name="cars" id="cars">
+  <option value="volvo">Volvo</option>
+  <option value="saab">Saab</option>
+  <option value="mercedes">Mercedes</option>
+  <option value="audi">Audi</option>
+</select>
+<label for="age">Age</label>
+	<input type="number" id="age" name="age" placeholder="Age" required>	
+		<label for="dob">DOB</label>
+	<input type="date" id="dob" name="dob" required>
+		<label for="tel">Phone Number</label>
+	<input type="tel" id="tel" name="tel" placeholder="xxx-xxx-xxxx">
+		<label for="password">Password</label>
+	<input type="password" id="password" name="password" placeholder="Password">
+		<label for="tos">I agree to the TOS</label>
+		<input type="checkbox" id="tos" name="tos" required> 
+		<input type="submit">
+	</form>
 </body>
 
 </html>
